# llm-tools

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  todo.md
.claude/: settings.local.json
.claude/agents/: code-reviewer-git.md
.github/workflows/: ci.yml
examples/: ask_usage.py  basic_usage.py  configuration_usage.py  diff_manager_usage.py  edit_usage.py  filter_usage.py  openai_usage.py  openrouter_usage.py  sorter_usage.py  summary_usage.py
examples/.claude/: settings.local.json
llmtools/: __init__.py  config.py  defaults.py
llmtools/interfaces/: __init__.py  llm.py  openai_llm.py  openrouter_llm.py
llmtools/knowledge_base/: __init__.py  base.py
llmtools/prompts/: __init__.py  edit_prompts.py  filter_prompts.py  sorter_prompts.py  summary_prompts.py
llmtools/sorter/: __init__.py  base.py
llmtools/tools/: __init__.py  ask.py  edit.py  filter.py  sorter.py  summary.py
llmtools/utils/: __init__.py  diff_manager.py  logging.py  tools.py
tests/: __init__.py  conftest.py  test_config.py  test_convert_functions_to_map.py  test_knowledge_base.py  test_openai.py  test_openrouter.py  test_sorter.py
vibetools/: __init__.py  defaults.py
vibetools/interfaces/: __init__.py  llm.py  openai_llm.py
vibetools/prompts/: __init__.py  ask_prompts.py  edit_prompts.py  filter_prompts.py
vibetools/tools/: __init__.py  ask.py  edit.py  filter.py  sorter.py  summary.py
vibetools/utils/: __init__.py  logger_config.py  tools.py
